@@ -5,9 +5,6 @@ HAL - 8a18dd34-9c59-42b6-94b0-0b4a7358f65c - milsymbol: @syncpoint/milsymbol npm
 
 OPEN
 Multiselect: test procedures
-MiniSearch: MIP Scenario - '@feature #unit 3osc' - no match ('3osc')
-MiniSearch: MIP Scenario - '@layer Phase 4A Enemy' - no match ('4a')
-
 62acff4b-df5d-4782-945c-41df50ca3b8c - clipboard: sidebar/map (incl. undo)
 1dedb884-7b83-47b8-baeb-53a18c877f02 - translate/clone: Escape key deselects and brings ongoing translate into trouble
 27b735bd-217a-4800-956f-97f0f4c92989 - backlog grooming (recurring)
