@@ -6,16 +6,18 @@ export const createIndex = () => new MiniSearch({
   tokenize: (string, fieldName) => {
     const tokens = R.uniq([
       ...string.split(/[\s-/]/), // A: el clásico
-      ...string.split(/(\/?["\w]+\.?)|[ /]/), // B: leading '/' and trailing '.'
-      ...string.split(/([\d/.]+)/) // C: separate numbers and words
+      ...string.split(/([/]?["\w]+[.]?)|[ /]/), // B: leading '/' and trailing '.'
+      ...string.split(/([\d/]+)/), // C: trailing '/'
+      ...string.split(/([\d ]+)/) // D: separate numbers and words
     ]
-      .filter(Boolean)
-      .map(s => s.trim())
+      .map(s => s ? s.trim() : '')
       .filter(s => !s.includes(' ')) // filter tokens with blanks introduced by C
+      .filter(Boolean)
     )
 
     return tokens
   },
+
   extractField: (document, fieldName) => {
     const value = document[fieldName]
     return value && fieldName === 'tags'
@@ -37,22 +39,21 @@ export const parseQuery = query => {
   }, { scope: [], text: [], tags: [] })
 }
 
+const searchField = (index, field, tokens) => {
+
+  // No search result is different from empty search result.
+  if (!tokens.length) return null
+
+  const options = field => ({ fields: [field], prefix: true, combineWith: 'AND' })
+  const matches = index.search(tokens.join(' '), options(field))
+  return matches.map(R.prop('id'))
+}
 
 /**
  *
  */
 export const searchIndex = (index, tokens) => {
-  const options = field => ({ fields: [field], prefix: true, combineWith: 'AND' })
-  const searchIndex = field => {
-    const matches = index.search(tokens[field].join(' '), options(field))
-    return matches.map(R.prop('id'))
-  }
-
-  const A = searchIndex('text')
-  const B = searchIndex('tags')
-  return A.length
-    ? B.length
-      ? R.intersection(A, B)
-      : A
-    : B
+  const A = searchField(index, 'text', tokens.text)
+  const B = searchField(index, 'tags', tokens.tags)
+  return A ? B ? R.intersection(A, B) : A : B
 }
