@@ -1,0 +1,162 @@
+[
+  {
+    "id": "feature:26ff072b-99ba-4b55-a3f8-a26cf6ef22ee/80a78e90-5c8d-46fc-a96c-8f26dc950c4c",
+    "scope": "feature",
+    "tags": [
+      "hidden",
+      "UNIT",
+      "ENY"
+    ],
+    "text": "23/3OSC Ground Track Unit Combat Infantry Mechanized Phase 4A Enemy"
+  },
+  {
+    "id": "feature:26ff072b-99ba-4b55-a3f8-a26cf6ef22ee/01859da9-054d-445e-9adc-bb4f39b59353",
+    "scope": "feature",
+    "tags": [
+      "hidden",
+      "UNIT",
+      "ENY"
+    ],
+    "text": "25/3OSC Ground Track Unit Combat Infantry Mechanized Phase 4A Enemy"
+  },
+  {
+    "id": "feature:26ff072b-99ba-4b55-a3f8-a26cf6ef22ee/a4f0845d-23a5-47ec-adae-dd5305fa24b8",
+    "scope": "feature",
+    "tags": [
+      "hidden",
+      "INSTALLATION",
+      "ENY"
+    ],
+    "text": "3OSC Ground Track Installation Military Base / Facility Seaport / Naval Base Phase 4A Enemy"
+  },
+  {
+    "id": "feature:26ff072b-99ba-4b55-a3f8-a26cf6ef22ee/0ebed9e4-b715-4061-b8eb-6b41199c9ea8",
+    "scope": "feature",
+    "tags": [
+      "hidden",
+      "UNIT",
+      "ENY"
+    ],
+    "text": "3OSC Ground Track Unit Combat Air Defense (AD) Missile Heavy Phase 4A Enemy"
+  },
+  {
+    "id": "feature:a19401fc-f522-4b8f-b43a-e684bb12647b/91c47f62-05b1-4f90-b8c1-7f856f4fbc8d",
+    "scope": "feature",
+    "tags": [
+      "hidden",
+      "UNIT",
+      "ENY"
+    ],
+    "text": "3OSC Ground Track Unit Combat Aviation - Vertical and / or Short Takeoff and Landing Aircraft (V / STOL) Phase 4 B Enemy"
+  },
+  {
+    "id": "feature:cd782978-8bb1-4c06-aca3-1a3842697457/f49cccc4-c5e6-4f8a-8124-eba23487e476",
+    "scope": "feature",
+    "tags": [
+      "hidden",
+      "UNIT",
+      "ENY"
+    ],
+    "text": "3OSC Ground Track Unit Combat Aviation - Vertical and / or Short Takeoff and Landing Aircraft (V / STOL) Phase 4 C Enemy"
+  },
+  {
+    "id": "feature:26ff072b-99ba-4b55-a3f8-a26cf6ef22ee/928f4b97-fec6-4b8d-9740-83770aa9cd37",
+    "scope": "feature",
+    "tags": [
+      "hidden",
+      "UNIT",
+      "ENY"
+    ],
+    "text": "3OSC Ground Track Unit Combat Aviation - Vertical and / or Short Takeoff and Landing Aircraft (V / STOL) Phase 4A Enemy"
+  },
+  {
+    "id": "feature:26ff072b-99ba-4b55-a3f8-a26cf6ef22ee/7bb7a078-3e30-4590-b5de-5b15d20fc97d",
+    "scope": "feature",
+    "tags": [
+      "hidden",
+      "UNIT",
+      "ENY"
+    ],
+    "text": "3OSC Ground Track Unit Combat Engineer Combat Heavy Phase 4A Enemy"
+  },
+  {
+    "id": "feature:26ff072b-99ba-4b55-a3f8-a26cf6ef22ee/820bc0e1-6bb8-4ac9-9c11-6aaa77df8ffa",
+    "scope": "feature",
+    "tags": [
+      "hidden",
+      "UNIT",
+      "ENY"
+    ],
+    "text": "3OSC Ground Track Unit Combat Infantry Mechanized Phase 4A Enemy"
+  },
+  {
+    "id": "feature:26ff072b-99ba-4b55-a3f8-a26cf6ef22ee/ac0b1f0d-ed8f-45d4-9bac-8630e37f214e",
+    "scope": "feature",
+    "tags": [
+      "hidden",
+      "UNIT",
+      "ENY"
+    ],
+    "text": "3OSC Ground Track Unit Combat Service Support (CSS) Administrative (Admin) Quartermaster (Supply) Theater Phase 4A Enemy"
+  },
+  {
+    "id": "feature:26ff072b-99ba-4b55-a3f8-a26cf6ef22ee/84465e5d-e6b5-4cb8-acd9-646dc2a581e5",
+    "scope": "feature",
+    "tags": [
+      "hidden",
+      "UNIT",
+      "ENY"
+    ],
+    "text": "3OSC Ground Track Unit Combat Service Support (CSS) Transportation - SPOD / SPOE Corps Phase 4A Enemy"
+  },
+  {
+    "id": "feature:26ff072b-99ba-4b55-a3f8-a26cf6ef22ee/d5e405e8-e8fe-4980-b1d2-4d51c280e92e",
+    "scope": "feature",
+    "tags": [
+      "hidden",
+      "UNIT",
+      "ENY"
+    ],
+    "text": "3OSC Ground Track Unit Combat Support (CS) Military Intelligence (MI) Signal Intelligence (SIGINT) Electronic Warfare (EW) - Jamming Phase 4A Enemy"
+  },
+  {
+    "id": "feature:a19401fc-f522-4b8f-b43a-e684bb12647b/3d6f4391-46ed-45c0-b14c-d6776a727498",
+    "scope": "feature",
+    "tags": [
+      "hidden",
+      "UNIT",
+      "ENY"
+    ],
+    "text": "A/3OSC Ground Track Unit Combat Missile (Surf-Surf) Tactical Phase 4 B Enemy"
+  },
+  {
+    "id": "feature:cd782978-8bb1-4c06-aca3-1a3842697457/09c9741a-f9d2-4b4f-bc9d-77f6552bdf7c",
+    "scope": "feature",
+    "tags": [
+      "hidden",
+      "UNIT",
+      "ENY"
+    ],
+    "text": "A/3OSC Ground Track Unit Combat Missile (Surf-Surf) Tactical Phase 4 C Enemy"
+  },
+  {
+    "id": "feature:26ff072b-99ba-4b55-a3f8-a26cf6ef22ee/0a45caf5-6423-4867-bb62-5e61a9056e77",
+    "scope": "feature",
+    "tags": [
+      "hidden",
+      "UNIT",
+      "ENY"
+    ],
+    "text": "A/3OSC Ground Track Unit Combat Missile (Surf-Surf) Tactical Phase 4A Enemy"
+  },
+  {
+    "id": "feature:26ff072b-99ba-4b55-a3f8-a26cf6ef22ee/ba9443f5-51a6-4a6b-b417-68a9898e5a29",
+    "scope": "feature",
+    "tags": [
+      "hidden",
+      "UNIT",
+      "ENY"
+    ],
+    "text": "B/3OSC Ground Track Unit Combat Missile (Surf-Surf) Tactical Phase 4A Enemy"
+  }
+]
